--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<div class="forecast-table">
 				<div class="container">
-					<div class="forecast-container">
+					<div id="itemsContainer" class="forecast-container">
 						<div class="today forecast">
 							<div class="forecast-header">
 								<div id="dayName" class="day"></div>
@@ -72,10 +72,10 @@
 							</div>
 						</div>
 
-						<div class="forecast">
+						<!--<div class="forecast">
 							<div class="forecast-header">
 								<div class="day">Tuesday</div>
-							</div> <!-- .forecast-header -->
+							</div> &lt;!&ndash; .forecast-header &ndash;&gt;
 							<div class="forecast-content">
 								<div class="forecast-icon">
 									<img src="images/icons/icon-3.svg" alt="" width=48>
@@ -83,7 +83,7 @@
 								<div class="degree">23<sup>o</sup>C</div>
 								<small>18<sup>o</sup></small>
 							</div>
-						</div>
+						</div>-->
 
 					</div>
 				</div>
